@@ -2,6 +2,10 @@
 
 * logging
 
-* difficulty coefficient
+* collision detection 
+
+* limit number of trials
 
 * identify bottlenecks and longest function calls
+
+* support for Python3 grammar
